# postal-rs

./: Cargo.toml  README.md
examples/send-email/: Cargo.toml
examples/send-email/src/: main.rs
src/: error.rs  lib.rs
