[package]
name = "postal-rs"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zhiburt/postal-rs"
license = "MIT"
keywords = ["email", "postal", "smtp"]
categories = ["email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
url = "2.1.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.*"
